2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MonkeyWrench.sln: Added new project.

2009-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* everything: Major rewrite to use a web services instead
	of direct database access from buildbots and web ui. Also
	included a lot of code reorganization.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.csproj: Updated.

2009-03-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.csproj: Updated.

2009-02-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.sln:
	* Builder.csproj: Add changelog/commit message instructions
	  for MonoDevelop.
