@@ -1,5 +1,9 @@
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Makefile: Make publish and install targets synonyms.
+
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* WebServices.asmx:
 	* WebServices.asmx.cs: Move code to cs file.
 
