@@ -1,3 +1,7 @@
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Makefile: Make publish and install targets synonyms.
+
 2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* MonkeyWrench.sln: Added new project.
